Fix failing ARM64E wasm tests https://bugs.webkit.org/show_bug.cgi?id=197420

Reviewed by Saam Barati.

This patch fixes a bug in the slow path of our JS->Wasm IC bridge
where we wouldn't untag the link register before tail calling.

Additionally, this patch fixes a broken assert when using setting
Options::useTailCalls=false.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitCallForwardArgumentsInTailPosition):
* wasm/js/WebAssemblyFunction.cpp:
(JSC::WebAssemblyFunction::jsCallEntrypointSlow):

Canonical link: https://commits.webkit.org/211608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244783 268f45cc-cd09-0410-ab3c-d52691b4dbfc